<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GradientFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/interval"/>

        <SeekBar
            android:id="@+id/intervalSeekBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="5000"
            android:progressDrawable="@drawable/custom_seekbar"
            android:thumb="@drawable/thumb"
            android:splitTrack="false"
            android:progressTint="@color/colorAccent"/>

        <TextView
            android:id="@+id/intervalTextView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/_0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/step"/>

        <SeekBar
            android:id="@+id/stepSeekBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressDrawable="@drawable/custom_seekbar"
            android:thumb="@drawable/thumb"
            android:splitTrack="false"
            android:progressTint="@color/colorAccent"/>

        <TextView
            android:id="@+id/stepTextView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/_0"/>

    </LinearLayout>

</LinearLayout>